{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "19f85eeb-e1d7-4897-b6f0-2c40f5dbda89",
            "actions": [
                {
                    "name": "Reiniciar",
                    "type": "Button",
                    "id": "ed718c0a-8b58-45a4-9ff1-44388e3715b9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Movimentacao",
                    "type": "Button",
                    "id": "57083671-e258-4419-bc3e-1a9c0f119127",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dfd5a1c5-67da-4f94-8681-761376d3aff5",
                    "path": "<Keyboard>/#(R)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reiniciar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "4544e79e-417d-4dda-98fb-3f0f23e37b4d",
                    "path": "2DVector(mode=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movimentacao",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "0889660b-65c4-404c-a54f-7bb6011eba00",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "Movimentacao",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c1b90743-1270-4ee3-afcd-d1400a8d25b0",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "Movimentacao",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "211dbf7f-d962-44c7-9183-83c2787239cb",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "Movimentacao",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3b5fad72-ca8e-4ca1-b436-4a13dc54a27d",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "Movimentacao",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "MSTT",
            "id": "e1cb488c-842c-4e64-a846-0a109337e035",
            "actions": [
                {
                    "name": "InputO",
                    "type": "Button",
                    "id": "cb25f573-3900-416c-a5bf-e21f93a68b0e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InputI",
                    "type": "Button",
                    "id": "347dec6f-e6f1-415f-a607-646416d0c20f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cf3545fd-6380-43c6-838a-55ec7027805a",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InputO",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13567281-98bd-4b6b-baf7-3b024f7090c1",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InputI",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "New control scheme",
            "bindingGroup": "New control scheme",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}